syntax = "proto3";

option go_package = "./;csat";

package csat;

service CSATService {
    rpc GetTest (GetTestRequest) returns (GetTestResponse);  
    rpc AddAnswers (AddAnswersRequest) returns (Empty);  
    rpc GetStatistics (Empty) returns (GetStatisticsResponse);
    }

    message GetTestRequest {
        string query = 1;
        int32 user_iD = 2;
    }

    message GetTestResponse {
        int32 id = 1;
        string title = 2;
        repeated Question questions = 3;
    }

    message Question {
        int32 id = 1;
        string text = 2;
    }

    message AddAnswersRequest {
        int32 user_iD = 1;
        repeated Answer answers = 2;
    }

    message Answer {
        int32 question_iD = 1;
        int32 value = 2;
    }

    message GetStatisticsResponse {
        repeated Stats statistics = 1;
    }

    message Stats {
        int32 iD=1;
        string question = 2;
        int32 value = 3;
    }
    message Empty{}